create initial support to an external api